<resources>
    <string name="app_name">CM Alert</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!--SetTitle Activity-->
    <string name="title_user">User</string>
    <string name="title_car">Car</string>
    <string name="title_add_car">Add Car Data</string>
    <string name="title_edit_user">Edit User</string>
    <string name="title_travel">Travel</string>
    <string name="title_list_part">List Parts</string>
    <string name="title_maintenance_history">Maintenance History</string>
    <string name="title_add_part">Add Parts</string>
    <string name="title_about">About</string>
    <string name="title_choose_language">Choose Language</string>
    <string name="title_setting">Setting</string>
    <string name="title_notification">Notification</string>

    <!--Choose Language-->
    <string name="langThai" translatable="false">ไทย</string>
    <string name="langEng" translatable="false">English</string>

    <!--Add User-->
    <string name="add_user_name">Name</string>
    <string name="add_user_birthday">BirthDay</string>
    <string name="add_user_exp_lincence">Expired driver license</string>
    <string name="add_user_ok">OK</string>
    <string name="add_user_cancel">CANCEL</string>

    <!--Menu-->
    <string name="menu_notification">Notification</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_about">About</string>
    <string name="menu_alarm">Alert Time</string>
    <string name="menu_user">Data User</string>

    <!--Setting-->
    <string name="setting_lang">Language</string>
    <string-array name="setting_lang_value">
        <item>English</item>
        <item>ไทย</item>
    </string-array>
    <string name="setting_alert">Alert Time</string>

    <!--About-->
    <string name="about_title">Developed By</string>
    <string name="about_uni_name">Rajamangala University of Technology Suvarnabhumi</string>
    <string name="about_uni_faculty">Faculty of Science and Technology</string>
    <string name="about_uni_branch">Computer Science</string>
    <string name="about_name_1">Miss Saikaew Ketmanee</string>
    <string name="about_email_1">nunuza002@hotmail.com</string>
    <string name="about_name_2">Mr. Kwanchai Trakulsantichai</string>
    <string name="about_email_2">kanwchai@hotmail.com</string>

    <!--Travel-->
    <string name="travel_regis_car">Registration</string>
    <string name="travel_kilo_car">Number Kilo</string>
    <string name="travel_start">Start</string>
    <string name="travel_stop">Stop</string>
    <string name="travel_connecting">Connecting</string>
    <string name="travel_disconnecting">Disconnecting</string>

    <!--Car Recycle-->
    <string-array name="choice_en">
        <item>Travel</item>
        <item>Maintenance</item>
        <item>History</item>
        <item>Delete</item>
    </string-array>

    <string-array name="choice_Lis">
        <item>Specify Last Maintenance</item>
        <item>Set Maturity</item>
        <item>Maintenance Guide</item>
        <item>Delete</item>
    </string-array>

    <!--Dialog Show Alert-->
    <string name="dialog_list_maintenance">List of maintenance</string>
    <string name="dialog_driving_licence">Driving licence</string>
    <string name="dialog_car">Car</string>
    <string name="dialog_tax_car">Tax car</string>
    <string name="dialog_close_alert">Do not show 1 day</string>

    <!--List Part-->
    <string name="lp_car_regis">Car Registration</string>
    <string name="lp_no_kilo">No. Kilometer</string>
    <string name="lp_exp_tax_date">Expiration Date Car Tax</string>

    <!--Add Car-->
    <string name="add_color">(Choose Color)</string>
    <string name="add_regis_front">Regis Front</string>
    <string name="add_regis_back">Regis Back</string>
    <string name="add_province">Province</string>
    <string name="add_no_kilo">Number Kilometers</string>
    <string name="add_tax">Expired Tax</string>
    <string name="add_oil_gasso">GASOLEAN</string>
    <string name="add_oil_diesel">DIESEL</string>
    <string name="add_gas_ngv">NGV</string>
    <string name="add_gas_lpg">LPG</string>
    <string name="add_gas_hyb">HYBRID</string>
    <string name="lp_PartName">Part Name</string>
    <string name="lp_RemainDays">Remain Days</string>
    <string name="lp_RemainKilo">Remain Kilo</string>
    <string name="lp_SelectNewPart">Select New Part</string>
    <string name="lp_AddNewPart">Add New Part(if not found)</string>
    <string name="np_PartName">Part Name</string>
    <string name="np_Name">Name</string>
    <string name="np_Termmaturity">Term maturity</string>
    <string name="np_Lifetime">Lifetime/Monts</string>
    <string name="np_MaintenanceType">Maintenance Type</string>
    <string name="np_Modify">Change</string>
    <string name="np_Repair">Repair</string>
    <string name="np_Clean">Clean</string>
    <string name="select_car_regis">Selected Car Registration</string>
    <string name="are_you_delete">Are Sure Delete</string>
    <string name="delete_success">is Deleted Success</string>
    <string name="his_ChangedDate">Changed Date</string>
    <string name="his_ChangedKilo">Changed Kilo</string>
    <string name="lp_SelectedPart">Selected Part</string>
    <string name="lp_Part">Part</string>
    <string name="lp_LastMaintenance">Last Maintenance</string>
    <string name="lp_DueDate">Due Date :</string>
    <string name="lp_DueKilometre">Due Kilometre :</string>
    <string name="lp_Save">SAVE</string>
    <string name="lp_delete">Delete</string>
    <string name="TB_Part_Name">Part_Name_En</string>
    <string name="TB_Part_Maintenance_Guide">Maintenance_Guide_En</string>
    <string name="num_Language">0</string>
    <string name="lp_Please_complete">Please complete the form below.</string>
</resources>
