<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|right"
            android:text="@string/lp_DueDate"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/due_date_spec"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:hint="Date"
            android:inputType="number"
            android:maxLines="1"
            android:textSize="15dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|right"
            android:text="@string/lp_DueKilometre"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/due_kilo_spec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:hint="Kilo"
            android:inputType="number"
            android:maxLines="1"
            android:textSize="15dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/button_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:gravity="center_vertical|center_horizontal"
            android:padding="16dp"
            android:text="@string/add_user_cancel"
            android:textColor="#989898"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:gravity="center_vertical|center_horizontal"
            android:padding="16dp"
            android:text="@string/lp_Save"
            android:textColor="#989898"
            android:textSize="15dp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>