<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:src="@drawable/car_part_4_11_59"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.100000024" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/partName"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/np_PartName"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.050000012" />

    <EditText
        android:id="@+id/partName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/np_Name"
        android:maxLength="30"
        android:singleLine="true"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginRight="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.100000024" />

    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/partName"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintVertical_bias="0.9"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp">

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/round_button_press"
            android:text="@string/add_user_ok"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/button6"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:layout_constraintBaseline_creator="1"
            tools:layout_constraintLeft_creator="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:orientation="vertical"></LinearLayout>

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/round_button_press"
            android:text="@string/add_user_cancel"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_constraintRight_creator="1"
            tools:layout_editor_absoluteY="562dp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
