<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/lp_car_regis"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.7" />

            <TextView
                android:id="@+id/car_regis_his"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.1"
                android:gravity="center_vertical|center_horizontal"
                android:hint="Car Registration"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.7" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/lp_PartName"
                android:textSize="15dp" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.6"
                android:layout_gravity="center" />

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.1"
                android:gravity="center_vertical|center_horizontal"
                android:hint="@string/lp_PartName"
                android:maxLength="30"
                android:singleLine="true"
                android:textSize="15dp" />

            <ImageButton
                android:id="@+id/bFind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.6"
                android:background="@android:drawable/ic_menu_search"
                android:layout_gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".75"
                android:background="@drawable/border_edittext"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/lp_PartName"
                android:textColor="#ffffff"
                android:textSize="13dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_edittext"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/his_ChangedDate"
                android:textColor="#ffffff"
                android:textSize="13dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_edittext"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/his_ChangedKilo"
                android:textColor="#ffffff"
                android:textSize="13dp" />

        </LinearLayout>

        <ListView
            android:id="@+id/listView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</RelativeLayout>
